// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`command-line checker imports and module instances reports noncanonical named and wildcard imports and exports 1`] = `
"test/fixtures/imports-exports.qnt:4:1: error[format/module-separation]: expected one blank line between modules
  |
4 | module Consumer {
  | ^^^^^^
  |
test/fixtures/imports-exports.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 |  import   Library
  | ^
  |
test/fixtures/imports-exports.qnt:5:8: error[format/declaration-keyword-spacing]: expected one space after 'import'
  |
5 |  import   Library
  |        ^^^
  |
test/fixtures/imports-exports.qnt:6:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
6 |  import Library  as   Lib
  | ^
  |
test/fixtures/imports-exports.qnt:6:18: error[format/import-alias-spacing]: expected one space around 'as'
  |
6 |  import Library  as   Lib
  |                  ^^
  |
test/fixtures/imports-exports.qnt:7:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
7 |  import Library . value
  | ^
  |
test/fixtures/imports-exports.qnt:7:17: error[format/import-selector-spacing]: expected no space around '.'
  |
7 |  import Library . value
  |                 ^
  |
test/fixtures/imports-exports.qnt:8:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
8 |  import Library . *
  | ^
  |
test/fixtures/imports-exports.qnt:8:17: error[format/import-selector-spacing]: expected no space around '.'
  |
8 |  import Library . *
  |                 ^
  |
test/fixtures/imports-exports.qnt:9:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
9 |  export  Library
  | ^
  |
test/fixtures/imports-exports.qnt:9:8: error[format/declaration-keyword-spacing]: expected one space after 'export'
  |
9 |  export  Library
  |        ^^
  |
test/fixtures/imports-exports.qnt:10:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
10 |  export Library  as   Public
   | ^
   |
test/fixtures/imports-exports.qnt:10:18: error[format/import-alias-spacing]: expected one space around 'as'
   |
10 |  export Library  as   Public
   |                  ^^
   |
test/fixtures/imports-exports.qnt:11:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
11 |  export Library . value
   | ^
   |
test/fixtures/imports-exports.qnt:11:17: error[format/import-selector-spacing]: expected no space around '.'
   |
11 |  export Library . value
   |                 ^
   |
test/fixtures/imports-exports.qnt:12:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
12 |  export Library . *
   | ^
   |
test/fixtures/imports-exports.qnt:12:17: error[format/import-selector-spacing]: expected no space around '.'
   |
12 |  export Library . *
   |                 ^
   |
"
`;

exports[`command-line checker imports and module instances reports noncanonical source-qualified imports 1`] = `
"test/fixtures/source-imports.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 |  import Library   from   "./quint-format-source-library"
  | ^
  |
test/fixtures/source-imports.qnt:2:19: error[format/import-source-spacing]: expected one space around 'from'
  |
2 |  import Library   from   "./quint-format-source-library"
  |                   ^^^^
  |
test/fixtures/source-imports.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 |  import Library . value from"./quint-format-source-library"
  | ^
  |
test/fixtures/source-imports.qnt:3:17: error[format/import-selector-spacing]: expected no space around '.'
  |
3 |  import Library . value from"./quint-format-source-library"
  |                 ^
  |
test/fixtures/source-imports.qnt:3:25: error[format/import-source-spacing]: expected one space around 'from'
  |
3 |  import Library . value from"./quint-format-source-library"
  |                         ^^^^
  |
test/fixtures/source-imports.qnt:4:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
4 |  import Library . *  from  "./quint-format-source-library"
  | ^
  |
test/fixtures/source-imports.qnt:4:17: error[format/import-selector-spacing]: expected no space around '.'
  |
4 |  import Library . *  from  "./quint-format-source-library"
  |                 ^
  |
test/fixtures/source-imports.qnt:4:22: error[format/import-source-spacing]: expected one space around 'from'
  |
4 |  import Library . *  from  "./quint-format-source-library"
  |                      ^^^^
  |
"
`;

exports[`command-line checker imports and module instances reports noncanonical module instances and overrides 1`] = `
"test/fixtures/module-instance.qnt:5:1: error[format/module-separation]: expected one blank line between modules
  |
5 | module Example {
  | ^^^^^^
  |
test/fixtures/module-instance.qnt:6:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  | ^
  |
test/fixtures/module-instance.qnt:6:17: error[format/instance-delimiter-spacing]: expected no space around instance parentheses
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                 ^
  |
test/fixtures/module-instance.qnt:6:20: error[format/instance-override-spacing]: expected one space around '='
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                    ^
  |
test/fixtures/module-instance.qnt:6:23: error[format/instance-override-separator-spacing]: expected ', ' between instance overrides
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                       ^
  |
test/fixtures/module-instance.qnt:6:28: error[format/instance-override-spacing]: expected one space around '='
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                            ^
  |
test/fixtures/module-instance.qnt:6:33: error[format/instance-trailing-comma]: trailing commas are omitted from inline instances
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                                 ^
  |
test/fixtures/module-instance.qnt:6:38: error[format/import-alias-spacing]: expected one space around 'as'
  |
6 |  import Library ( N=1 ,Flag=true, )  as   Lib
  |                                      ^^
  |
"
`;

exports[`command-line checker imports and module instances reports noncanonical instance-override comment formatting 1`] = `
"test/fixtures/instance-override-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Library{
  |               ^
  |
test/fixtures/instance-override-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | const N:int
  | ^
  |
test/fixtures/instance-override-comment.qnt:2:9: error[format/type-colon-spacing]: expected one space after ':'
  |
2 | const N:int
  |         ^
  |
test/fixtures/instance-override-comment.qnt:4:1: error[format/module-separation]: expected one blank line between modules
  |
4 | module Example{
  | ^^^^^^
  |
test/fixtures/instance-override-comment.qnt:4:15: error[format/module-brace-spacing]: expected one space before '{'
  |
4 | module Example{
  |               ^
  |
test/fixtures/instance-override-comment.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 | import Library(
  | ^
  |
test/fixtures/instance-override-comment.qnt:5:15: error[format/instance-delimiter-spacing]: expected expanded instance overrides with two-space indentation
  |
5 | import Library(
  |               ^
  |
test/fixtures/instance-override-comment.qnt:7:2: error[format/instance-override-spacing]: expected one space around '='
  |
7 | N=1
  |  ^
  |
test/fixtures/instance-override-comment.qnt:8:2: error[format/import-alias-spacing]: expected one space around 'as'
  |
8 | )as Lib
  |  ^^
  |
"
`;

exports[`command-line checker imports and module instances reports noncanonical anonymous instances 1`] = `
"test/fixtures/anonymous-instance.qnt:4:1: error[format/module-separation]: expected one blank line between modules
  |
4 | module Example {
  | ^^^^^^
  |
test/fixtures/anonymous-instance.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 |  import Library ( N=1, ) . *
  | ^
  |
test/fixtures/anonymous-instance.qnt:5:17: error[format/instance-delimiter-spacing]: expected no space around instance parentheses
  |
5 |  import Library ( N=1, ) . *
  |                 ^
  |
test/fixtures/anonymous-instance.qnt:5:20: error[format/instance-override-spacing]: expected one space around '='
  |
5 |  import Library ( N=1, ) . *
  |                    ^
  |
test/fixtures/anonymous-instance.qnt:5:22: error[format/instance-trailing-comma]: trailing commas are omitted from inline instances
  |
5 |  import Library ( N=1, ) . *
  |                      ^
  |
test/fixtures/anonymous-instance.qnt:5:26: error[format/import-selector-spacing]: expected no space around '.'
  |
5 |  import Library ( N=1, ) . *
  |                          ^
  |
"
`;

exports[`command-line checker imports and module instances reports noncanonical anonymous-instance comment formatting 1`] = `
"test/fixtures/anonymous-instance-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Library{
  |               ^
  |
test/fixtures/anonymous-instance-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | const N:int
  | ^
  |
test/fixtures/anonymous-instance-comment.qnt:2:9: error[format/type-colon-spacing]: expected one space after ':'
  |
2 | const N:int
  |         ^
  |
test/fixtures/anonymous-instance-comment.qnt:4:1: error[format/module-separation]: expected one blank line between modules
  |
4 | module Example{
  | ^^^^^^
  |
test/fixtures/anonymous-instance-comment.qnt:4:15: error[format/module-brace-spacing]: expected one space before '{'
  |
4 | module Example{
  |               ^
  |
test/fixtures/anonymous-instance-comment.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 | import Library(
  | ^
  |
test/fixtures/anonymous-instance-comment.qnt:5:15: error[format/instance-delimiter-spacing]: expected expanded instance overrides with two-space indentation
  |
5 | import Library(
  |               ^
  |
test/fixtures/anonymous-instance-comment.qnt:7:2: error[format/instance-override-spacing]: expected one space around '='
  |
7 | N=1
  |  ^
  |
"
`;

exports[`command-line checker parenthesized and arithmetic expressions reports noncanonical parenthesized expression formatting 1`] = `
"test/fixtures/parenthesized-expression.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val total=(1+2)
  | ^
  |
test/fixtures/parenthesized-expression.qnt:2:10: error[format/equals-spacing]: expected one space around '='
  |
2 | val total=(1+2)
  |          ^
  |
test/fixtures/parenthesized-expression.qnt:2:13: error[format/binary-operator-spacing]: expected one space around '+'
  |
2 | val total=(1+2)
  |             ^
  |
"
`;

exports[`command-line checker parenthesized and arithmetic expressions reports noncanonical subtraction formatting 1`] = `
"test/fixtures/subtraction-expression.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val delta=3-1
  | ^
  |
test/fixtures/subtraction-expression.qnt:2:10: error[format/equals-spacing]: expected one space around '='
  |
2 | val delta=3-1
  |          ^
  |
test/fixtures/subtraction-expression.qnt:2:12: error[format/binary-operator-spacing]: expected one space around '-'
  |
2 | val delta=3-1
  |            ^
  |
"
`;

exports[`command-line checker source and declaration layout reports a compact module after a hashbang 1`] = `
"test/fixtures/hashbang.qnt:2:16: error[format/empty-module]: empty module braces must be on separate lines
  |
2 | module Example {}
  |                ^^
  |
"
`;

exports[`command-line checker source and declaration layout reports noncanonical multiple-module layout 1`] = `
"test/fixtures/multiple-modules.qnt:1:14: error[format/empty-module]: empty module braces must be on separate lines
  |
1 | module First {} module Second {}
  |              ^^
  |
test/fixtures/multiple-modules.qnt:1:17: error[format/module-separation]: expected one blank line between modules
  |
1 | module First {} module Second {}
  |                 ^^^^^^
  |
test/fixtures/multiple-modules.qnt:1:31: error[format/empty-module]: empty module braces must be on separate lines
  |
1 | module First {} module Second {}
  |                               ^^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical leading line-comment formatting 1`] = `
"test/fixtures/leading-line-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | // The answer
  | ^
  |
test/fixtures/leading-line-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/leading-line-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical documentation-comment formatting 1`] = `
"test/fixtures/documentation-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /// The answer
  | ^
  |
test/fixtures/documentation-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/documentation-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical block-comment formatting 1`] = `
"test/fixtures/block-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /* The answer */
  | ^
  |
test/fixtures/block-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/block-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical multiline block-comment formatting 1`] = `
"test/fixtures/multiline-block-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /*
  | ^
  |
test/fixtures/multiline-block-comment.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 | val answer=42
  | ^
  |
test/fixtures/multiline-block-comment.qnt:5:11: error[format/equals-spacing]: expected one space around '='
  |
5 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical module documentation-comment formatting 1`] = `
"test/fixtures/module-documentation-comment.qnt:1:1: error[format/comment-indentation]: expected no indentation at the source level
  |
1 |  /// Module documentation
  | ^
  |
test/fixtures/module-documentation-comment.qnt:2:16: error[format/empty-module]: empty module braces must be on separate lines
  |
2 | module Example {}
  |                ^^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical trailing line-comment formatting 1`] = `
"test/fixtures/trailing-line-comment.qnt:2:18: error[format/comment-spacing]: expected one space before a trailing comment
  |
2 |   val answer = 42// The answer
  |                  ^^
  |
"
`;

exports[`command-line checker comments and comment layout reports a misindented trailing module-body comment 1`] = `
"test/fixtures/trailing-module-comment.qnt:4:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
4 | // Kept for future work
  | ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical trailing source comments 1`] = `
"test/fixtures/trailing-source-comments.qnt:3:1: error[format/comment-indentation]: expected no indentation at the source level
  |
3 |  /*! answer !*/
  | ^
  |
test/fixtures/trailing-source-comments.qnt:3:2: error[format/source-comment-separation]: expected one blank line before a trailing source comment
  |
3 |  /*! answer !*/
  |  ^^^^^^^^^^^^^^
  |
test/fixtures/trailing-source-comments.qnt:4:1: error[format/source-comment-separation]: expected one blank line before a trailing source comment
  |
4 | /*! 1 + 1 !*/
  | ^^^^^^^^^^^^^
  |
"
`;

exports[`command-line checker comments and comment layout reports a misindented comment-only module 1`] = `
"test/fixtures/comment-only-module.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | // Intentionally empty
  | ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical inline-comment formatting 1`] = `
"test/fixtures/inline-comment.qnt:2:16: error[format/comment-spacing]: expected one space before an inline comment
  |
2 |   val total = 1/* left */+2
  |                ^^
  |
test/fixtures/inline-comment.qnt:2:26: error[format/binary-operator-spacing]: expected one space around '+'
  |
2 |   val total = 1/* left */+2
  |                          ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical binary-right comment formatting 1`] = `
"test/fixtures/binary-right-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
test/fixtures/binary-right-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | pure val answer=true and
  | ^
  |
test/fixtures/binary-right-comment.qnt:2:16: error[format/equals-spacing]: expected one space around '='
  |
2 | pure val answer=true and
  |                ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical nested-definition comment formatting 1`] = `
"test/fixtures/nested-definition-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
test/fixtures/nested-definition-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | action step={
  | ^
  |
test/fixtures/nested-definition-comment.qnt:2:12: error[format/equals-spacing]: expected one space around '='
  |
2 | action step={
  |            ^
  |
test/fixtures/nested-definition-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical local trailing-comment formatting 1`] = `
"test/fixtures/local-definition-trailing-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
test/fixtures/local-definition-trailing-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | action step={
  | ^
  |
test/fixtures/local-definition-trailing-comment.qnt:2:12: error[format/equals-spacing]: expected one space around '='
  |
2 | action step={
  |            ^
  |
test/fixtures/local-definition-trailing-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42 // Preserve this local comment.
  |           ^
  |
test/fixtures/local-definition-trailing-comment.qnt:4:1: error[format/nested-definition-layout]: expected the nested definition body on a new line
  |
4 | answer
  | ^^^^^^
  |
"
`;

exports[`command-line checker comments and comment layout reports noncanonical local definition-body comment formatting 1`] = `
"test/fixtures/local-definition-body-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
test/fixtures/local-definition-body-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | action step={
  | ^
  |
test/fixtures/local-definition-body-comment.qnt:2:12: error[format/equals-spacing]: expected one space around '='
  |
2 | action step={
  |            ^
  |
test/fixtures/local-definition-body-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=
  |           ^
  |
test/fixtures/local-definition-body-comment.qnt:6:1: error[format/nested-definition-layout]: expected the nested definition body on a new line
  |
6 | answer
  | ^^^^^^
  |
"
`;

exports[`command-line checker definitions reports noncanonical general assumption formatting 1`] = `
"test/fixtures/assumption-expression.qnt:4:15: error[format/equals-spacing]: expected one space around '='
  |
4 |   assume Holds=Flag
  |               ^
  |
"
`;

exports[`command-line checker definitions reports noncanonical parameterless def formatting 1`] = `
"test/fixtures/def-definition.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   def answer=42
  |             ^
  |
"
`;

exports[`command-line checker definitions reports noncanonical def-parameter formatting 1`] = `
"test/fixtures/def-parameter.qnt:2:16: error[format/parameter-list-spacing]: expected no space after '('
  |
2 |   def identity( value )=value
  |                ^
  |
test/fixtures/def-parameter.qnt:2:22: error[format/parameter-list-spacing]: expected no space before ')'
  |
2 |   def identity( value )=value
  |                      ^
  |
test/fixtures/def-parameter.qnt:2:24: error[format/equals-spacing]: expected one space around '='
  |
2 |   def identity( value )=value
  |                        ^
  |
"
`;

exports[`command-line checker definitions reports noncanonical ignored-parameter formatting 1`] = `
"test/fixtures/hole-parameter.qnt:2:19: error[format/parameter-list-spacing]: expected no space after '('
  |
2 |   pure def ignore( _: int ): int = 0
  |                   ^
  |
test/fixtures/hole-parameter.qnt:2:26: error[format/parameter-list-spacing]: expected no space before ')'
  |
2 |   pure def ignore( _: int ): int = 0
  |                          ^
  |
"
`;

exports[`command-line checker definitions reports noncanonical multiple-def-parameter formatting 1`] = `
"test/fixtures/multiple-def-parameters.qnt:2:19: error[format/parameter-separator-spacing]: expected ', ' between parameters
  |
2 |   def choose(left ,right)=left
  |                   ^
  |
test/fixtures/multiple-def-parameters.qnt:2:26: error[format/equals-spacing]: expected one space around '='
  |
2 |   def choose(left ,right)=left
  |                          ^
  |
"
`;

exports[`command-line checker definitions reports noncanonical typed-def-header formatting 1`] = `
"test/fixtures/typed-def-header.qnt:2:21: error[format/type-colon-spacing]: expected no space before ':'
  |
2 |   def identity(value :int) :int=value
  |                     ^
  |
test/fixtures/typed-def-header.qnt:2:23: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   def identity(value :int) :int=value
  |                       ^
  |
test/fixtures/typed-def-header.qnt:2:27: error[format/type-colon-spacing]: expected no space before ':'
  |
2 |   def identity(value :int) :int=value
  |                           ^
  |
test/fixtures/typed-def-header.qnt:2:29: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   def identity(value :int) :int=value
  |                             ^
  |
test/fixtures/typed-def-header.qnt:2:32: error[format/equals-spacing]: expected one space around '='
  |
2 |   def identity(value :int) :int=value
  |                                ^
  |
"
`;

exports[`command-line checker definitions reports a noncanonical untyped parameter with a return type 1`] = `
"test/fixtures/untyped-parameter-return.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 |  def identity( value ) : int=value
  | ^
  |
test/fixtures/untyped-parameter-return.qnt:2:15: error[format/parameter-list-spacing]: expected no space after '('
  |
2 |  def identity( value ) : int=value
  |               ^
  |
test/fixtures/untyped-parameter-return.qnt:2:21: error[format/parameter-list-spacing]: expected no space before ')'
  |
2 |  def identity( value ) : int=value
  |                     ^
  |
test/fixtures/untyped-parameter-return.qnt:2:23: error[format/type-colon-spacing]: expected no space before ':'
  |
2 |  def identity( value ) : int=value
  |                       ^
  |
test/fixtures/untyped-parameter-return.qnt:2:29: error[format/equals-spacing]: expected one space around '='
  |
2 |  def identity( value ) : int=value
  |                             ^
  |
"
`;

exports[`command-line checker definitions reports noncanonical List-typed-header formatting 1`] = `
"test/fixtures/list-typed-header.qnt:2:25: error[format/type-delimiter-spacing]: expected no space after '['
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                         ^
  |
test/fixtures/list-typed-header.qnt:2:29: error[format/type-delimiter-spacing]: expected no space before ']'
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                             ^
  |
test/fixtures/list-typed-header.qnt:2:39: error[format/type-delimiter-spacing]: expected no space after '['
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                                       ^
  |
test/fixtures/list-typed-header.qnt:2:43: error[format/type-delimiter-spacing]: expected no space before ']'
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                                           ^
  |
"
`;

exports[`command-line checker definitions reports an optional definition semicolon 1`] = `
"test/fixtures/definition-semicolon.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   def answer=42;
  |             ^
  |
test/fixtures/definition-semicolon.qnt:2:16: error[format/unnecessary-semicolon]: optional semicolons are omitted
  |
2 |   def answer=42;
  |                ^
  |
"
`;

exports[`command-line checker type declarations reports noncanonical type-alias formatting 1`] = `
"test/fixtures/type-alias.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   type Count=int
  |             ^
  |
"
`;

exports[`command-line checker type declarations reports noncanonical uninterpreted-type formatting 1`] = `
"test/fixtures/uninterpreted-type.qnt:2:7: error[format/declaration-keyword-spacing]: expected one space after 'type'
  |
2 |   type   DOMAIN
  |       ^^^
  |
"
`;

exports[`command-line checker type declarations reports noncanonical named-type-alias formatting 1`] = `
"test/fixtures/named-type-alias.qnt:4:12: error[format/equals-spacing]: expected one space around '='
  |
4 |   type Copy=DOMAIN
  |            ^
  |
"
`;

exports[`command-line checker type declarations reports noncanonical polymorphic-type-alias formatting 1`] = `
"test/fixtures/polymorphic-type-alias.qnt:2:12: error[format/type-parameter-list-spacing]: expected no space after '['
  |
2 |   type Box[ a ]=List[a]
  |            ^
  |
test/fixtures/polymorphic-type-alias.qnt:2:14: error[format/type-parameter-list-spacing]: expected no space before ']'
  |
2 |   type Box[ a ]=List[a]
  |              ^
  |
test/fixtures/polymorphic-type-alias.qnt:2:16: error[format/equals-spacing]: expected one space around '='
  |
2 |   type Box[ a ]=List[a]
  |                ^
  |
"
`;

exports[`command-line checker type declarations reports noncanonical type-application formatting 1`] = `
"test/fixtures/type-application.qnt:4:15: error[format/type-colon-spacing]: expected one space after ':'
  |
4 |   const boxes:Box[ int ]
  |               ^
  |
test/fixtures/type-application.qnt:4:19: error[format/type-delimiter-spacing]: expected no space after '['
  |
4 |   const boxes:Box[ int ]
  |                   ^
  |
test/fixtures/type-application.qnt:4:23: error[format/type-delimiter-spacing]: expected no space before ']'
  |
4 |   const boxes:Box[ int ]
  |                       ^
  |
"
`;

exports[`command-line checker type declarations reports noncanonical sum-type formatting 1`] = `
"test/fixtures/sum-type.qnt:2:12: error[format/equals-spacing]: expected one space around '='
  |
2 |   type Elem=S( str )|I( int )
  |            ^
  |
test/fixtures/sum-type.qnt:2:15: error[format/type-delimiter-spacing]: expected no space after '('
  |
2 |   type Elem=S( str )|I( int )
  |               ^
  |
test/fixtures/sum-type.qnt:2:19: error[format/type-delimiter-spacing]: expected no space before ')'
  |
2 |   type Elem=S( str )|I( int )
  |                   ^
  |
test/fixtures/sum-type.qnt:2:21: error[format/type-separator-spacing]: expected one space around '|'
  |
2 |   type Elem=S( str )|I( int )
  |                     ^
  |
test/fixtures/sum-type.qnt:2:24: error[format/type-delimiter-spacing]: expected no space after '('
  |
2 |   type Elem=S( str )|I( int )
  |                        ^
  |
test/fixtures/sum-type.qnt:2:28: error[format/type-delimiter-spacing]: expected no space before ')'
  |
2 |   type Elem=S( str )|I( int )
  |                            ^
  |
"
`;

exports[`command-line checker type declarations reports noncanonical multiline-sum-type formatting 1`] = `
"test/fixtures/multiline-sum-type.qnt:3:1: error[format/sum-variant-indentation]: expected 4 spaces of indentation
  |
3 |   | Some( a )
  | ^^
  |
test/fixtures/multiline-sum-type.qnt:3:10: error[format/type-delimiter-spacing]: expected no space after '('
  |
3 |   | Some( a )
  |          ^
  |
test/fixtures/multiline-sum-type.qnt:3:12: error[format/type-delimiter-spacing]: expected no space before ')'
  |
3 |   | Some( a )
  |            ^
  |
test/fixtures/multiline-sum-type.qnt:4:1: error[format/sum-variant-indentation]: expected 4 spaces of indentation
  |
4 |    | None
  | ^^^
  |
"
`;

exports[`command-line checker type declarations reports noncanonical sum-type comment formatting 1`] = `
"test/fixtures/sum-type-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
test/fixtures/sum-type-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | type Step=
  | ^
  |
test/fixtures/sum-type-comment.qnt:2:10: error[format/equals-spacing]: expected a line break after '='
  |
2 | type Step=
  |          ^
  |
test/fixtures/sum-type-comment.qnt:3:1: error[format/sum-variant-indentation]: expected 4 spaces of indentation
  |
3 | |First
  | ^
  |
test/fixtures/sum-type-comment.qnt:3:1: error[format/type-separator-spacing]: expected one space after '|'
  |
3 | |First
  | ^
  |
test/fixtures/sum-type-comment.qnt:5:1: error[format/sum-variant-indentation]: expected 4 spaces of indentation
  |
5 | |Second
  | ^
  |
test/fixtures/sum-type-comment.qnt:5:1: error[format/type-separator-spacing]: expected one space after '|'
  |
5 | |Second
  | ^
  |
"
`;

exports[`command-line checker definition modes reports noncanonical pure-definition formatting 1`] = `
"test/fixtures/pure-definition.qnt:2:7: error[format/qualifier-spacing]: expected one space after 'pure'
  |
2 |   pure   def answer=42
  |       ^^^
  |
test/fixtures/pure-definition.qnt:2:20: error[format/equals-spacing]: expected one space around '='
  |
2 |   pure   def answer=42
  |                    ^
  |
"
`;

exports[`command-line checker definition modes reports noncanonical pure-value formatting 1`] = `
"test/fixtures/pure-value-definition.qnt:2:7: error[format/qualifier-spacing]: expected one space after 'pure'
  |
2 |   pure   val answer=42
  |       ^^^
  |
test/fixtures/pure-value-definition.qnt:2:20: error[format/equals-spacing]: expected one space around '='
  |
2 |   pure   val answer=42
  |                    ^
  |
"
`;

exports[`command-line checker definition modes reports noncanonical action formatting 1`] = `
"test/fixtures/action-definition.qnt:2:20: error[format/equals-spacing]: expected one space around '='
  |
2 |   action initialize=true
  |                    ^
  |
"
`;

exports[`command-line checker definition modes reports noncanonical definition-body comment formatting 1`] = `
"test/fixtures/definition-body-comment.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
test/fixtures/definition-body-comment.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | action init=
  | ^
  |
test/fixtures/definition-body-comment.qnt:2:12: error[format/equals-spacing]: expected one space around '='
  |
2 | action init=
  |            ^
  |
"
`;

exports[`command-line checker definition modes reports noncanonical run formatting 1`] = `
"test/fixtures/run-definition.qnt:2:15: error[format/equals-spacing]: expected one space around '='
  |
2 |   run scenario=true
  |               ^
  |
"
`;

exports[`command-line checker definition modes reports noncanonical temporal formatting 1`] = `
"test/fixtures/temporal-definition.qnt:2:21: error[format/equals-spacing]: expected one space around '='
  |
2 |   temporal invariant=true
  |                     ^
  |
"
`;

exports[`command-line checker definition modes reports noncanonical nondet formatting 1`] = `
"test/fixtures/nondet-definition.qnt:2:19: error[format/equals-spacing]: expected one space around '='
  |
2 |   nondet selection=true
  |                   ^
  |
"
`;

exports[`command-line checker definition modes reports noncanonical empty parameter lists 1`] = `
"test/fixtures/empty-parameter-lists.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 |  action step(  ) :bool=true
  | ^
  |
test/fixtures/empty-parameter-lists.qnt:2:13: error[format/parameter-list-spacing]: expected no space around an empty parameter list
  |
2 |  action step(  ) :bool=true
  |             ^
  |
test/fixtures/empty-parameter-lists.qnt:2:17: error[format/type-colon-spacing]: expected no space before ':'
  |
2 |  action step(  ) :bool=true
  |                 ^
  |
test/fixtures/empty-parameter-lists.qnt:2:19: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |  action step(  ) :bool=true
  |                   ^
  |
test/fixtures/empty-parameter-lists.qnt:2:23: error[format/equals-spacing]: expected one space around '='
  |
2 |  action step(  ) :bool=true
  |                       ^
  |
test/fixtures/empty-parameter-lists.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 |  run scenario( ):bool=true
  | ^
  |
test/fixtures/empty-parameter-lists.qnt:3:14: error[format/parameter-list-spacing]: expected no space around an empty parameter list
  |
3 |  run scenario( ):bool=true
  |              ^
  |
test/fixtures/empty-parameter-lists.qnt:3:18: error[format/type-colon-spacing]: expected one space after ':'
  |
3 |  run scenario( ):bool=true
  |                  ^
  |
test/fixtures/empty-parameter-lists.qnt:3:22: error[format/equals-spacing]: expected one space around '='
  |
3 |  run scenario( ):bool=true
  |                      ^
  |
test/fixtures/empty-parameter-lists.qnt:4:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
4 |  temporal property(  ):bool=true
  | ^
  |
test/fixtures/empty-parameter-lists.qnt:4:19: error[format/parameter-list-spacing]: expected no space around an empty parameter list
  |
4 |  temporal property(  ):bool=true
  |                   ^
  |
test/fixtures/empty-parameter-lists.qnt:4:24: error[format/type-colon-spacing]: expected one space after ':'
  |
4 |  temporal property(  ):bool=true
  |                        ^
  |
test/fixtures/empty-parameter-lists.qnt:4:28: error[format/equals-spacing]: expected one space around '='
  |
4 |  temporal property(  ):bool=true
  |                            ^
  |
test/fixtures/empty-parameter-lists.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 |  nondet choose( ) :int=1
  | ^
  |
test/fixtures/empty-parameter-lists.qnt:5:15: error[format/parameter-list-spacing]: expected no space around an empty parameter list
  |
5 |  nondet choose( ) :int=1
  |               ^
  |
test/fixtures/empty-parameter-lists.qnt:5:18: error[format/type-colon-spacing]: expected no space before ':'
  |
5 |  nondet choose( ) :int=1
  |                  ^
  |
test/fixtures/empty-parameter-lists.qnt:5:20: error[format/type-colon-spacing]: expected one space after ':'
  |
5 |  nondet choose( ) :int=1
  |                    ^
  |
test/fixtures/empty-parameter-lists.qnt:5:23: error[format/equals-spacing]: expected one space around '='
  |
5 |  nondet choose( ) :int=1
  |                       ^
  |
"
`;

exports[`command-line checker definition modes reports noncanonical rich definitions across every mode 1`] = `
"test/fixtures/definition-matrix.qnt:1:14: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Matrix{
  |              ^
  |
test/fixtures/definition-matrix.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | type Pair[a,b]=(a,b)
  | ^
  |
test/fixtures/definition-matrix.qnt:2:12: error[format/type-parameter-separator-spacing]: expected ', ' between type parameters
  |
2 | type Pair[a,b]=(a,b)
  |            ^
  |
test/fixtures/definition-matrix.qnt:2:15: error[format/equals-spacing]: expected one space around '='
  |
2 | type Pair[a,b]=(a,b)
  |               ^
  |
test/fixtures/definition-matrix.qnt:2:18: error[format/type-separator-spacing]: expected ', ' between types
  |
2 | type Pair[a,b]=(a,b)
  |                  ^
  |
test/fixtures/definition-matrix.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | type Callback[a,b]=(a)=>b
  | ^
  |
test/fixtures/definition-matrix.qnt:3:16: error[format/type-parameter-separator-spacing]: expected ', ' between type parameters
  |
3 | type Callback[a,b]=(a)=>b
  |                ^
  |
test/fixtures/definition-matrix.qnt:3:19: error[format/equals-spacing]: expected one space around '='
  |
3 | type Callback[a,b]=(a)=>b
  |                   ^
  |
test/fixtures/definition-matrix.qnt:3:23: error[format/type-operator-spacing]: expected one space around '=>'
  |
3 | type Callback[a,b]=(a)=>b
  |                       ^^
  |
test/fixtures/definition-matrix.qnt:4:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
4 | var n:int
  | ^
  |
test/fixtures/definition-matrix.qnt:4:7: error[format/type-colon-spacing]: expected one space after ':'
  |
4 | var n:int
  |       ^
  |
test/fixtures/definition-matrix.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 | pure def identity(value:List[Set[int]]):List[Set[int]]=value
  | ^
  |
test/fixtures/definition-matrix.qnt:5:25: error[format/type-colon-spacing]: expected one space after ':'
  |
5 | pure def identity(value:List[Set[int]]):List[Set[int]]=value
  |                         ^
  |
test/fixtures/definition-matrix.qnt:5:41: error[format/type-colon-spacing]: expected one space after ':'
  |
5 | pure def identity(value:List[Set[int]]):List[Set[int]]=value
  |                                         ^
  |
test/fixtures/definition-matrix.qnt:5:55: error[format/equals-spacing]: expected one space around '='
  |
5 | pure def identity(value:List[Set[int]]):List[Set[int]]=value
  |                                                       ^
  |
test/fixtures/definition-matrix.qnt:6:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
6 | pure def apply(value:int,callback:(int)=>str):str=callback(value)
  | ^
  |
test/fixtures/definition-matrix.qnt:6:22: error[format/type-colon-spacing]: expected one space after ':'
  |
6 | pure def apply(value:int,callback:(int)=>str):str=callback(value)
  |                      ^
  |
test/fixtures/definition-matrix.qnt:6:25: error[format/parameter-separator-spacing]: expected ', ' between parameters
  |
6 | pure def apply(value:int,callback:(int)=>str):str=callback(value)
  |                         ^
  |
test/fixtures/definition-matrix.qnt:6:35: error[format/type-colon-spacing]: expected one space after ':'
  |
6 | pure def apply(value:int,callback:(int)=>str):str=callback(value)
  |                                   ^
  |
test/fixtures/definition-matrix.qnt:6:40: error[format/type-operator-spacing]: expected one space around '=>'
  |
6 | pure def apply(value:int,callback:(int)=>str):str=callback(value)
  |                                        ^^
  |
test/fixtures/definition-matrix.qnt:6:47: error[format/type-colon-spacing]: expected one space after ':'
  |
6 | pure def apply(value:int,callback:(int)=>str):str=callback(value)
  |                                               ^
  |
test/fixtures/definition-matrix.qnt:6:50: error[format/equals-spacing]: expected one space around '='
  |
6 | pure def apply(value:int,callback:(int)=>str):str=callback(value)
  |                                                  ^
  |
test/fixtures/definition-matrix.qnt:7:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
7 | def stateValue(offset:int):int=n+offset
  | ^
  |
test/fixtures/definition-matrix.qnt:7:23: error[format/type-colon-spacing]: expected one space after ':'
  |
7 | def stateValue(offset:int):int=n+offset
  |                       ^
  |
test/fixtures/definition-matrix.qnt:7:28: error[format/type-colon-spacing]: expected one space after ':'
  |
7 | def stateValue(offset:int):int=n+offset
  |                            ^
  |
test/fixtures/definition-matrix.qnt:7:31: error[format/equals-spacing]: expected one space around '='
  |
7 | def stateValue(offset:int):int=n+offset
  |                               ^
  |
test/fixtures/definition-matrix.qnt:7:33: error[format/binary-operator-spacing]: expected one space around '+'
  |
7 | def stateValue(offset:int):int=n+offset
  |                                 ^
  |
test/fixtures/definition-matrix.qnt:8:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
8 | action advance(amount:int):bool=all{
  | ^
  |
test/fixtures/definition-matrix.qnt:8:23: error[format/type-colon-spacing]: expected one space after ':'
  |
8 | action advance(amount:int):bool=all{
  |                       ^
  |
test/fixtures/definition-matrix.qnt:8:28: error[format/type-colon-spacing]: expected one space after ':'
  |
8 | action advance(amount:int):bool=all{
  |                            ^
  |
test/fixtures/definition-matrix.qnt:8:32: error[format/equals-spacing]: expected one space around '='
  |
8 | action advance(amount:int):bool=all{
  |                                ^
  |
test/fixtures/definition-matrix.qnt:9:7: error[format/binary-operator-spacing]: expected one space around '>'
  |
9 | amount>0,
  |       ^
  |
test/fixtures/definition-matrix.qnt:10:3: error[format/assignment-spacing]: expected one space around '='
   |
10 | n'=n+amount,
   |   ^
   |
test/fixtures/definition-matrix.qnt:10:5: error[format/binary-operator-spacing]: expected one space around '+'
   |
10 | n'=n+amount,
   |     ^
   |
test/fixtures/definition-matrix.qnt:12:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
12 | run scenario(start:int):bool=(n'=start).then(n'=start+1)
   | ^
   |
test/fixtures/definition-matrix.qnt:12:20: error[format/type-colon-spacing]: expected one space after ':'
   |
12 | run scenario(start:int):bool=(n'=start).then(n'=start+1)
   |                    ^
   |
test/fixtures/definition-matrix.qnt:12:25: error[format/type-colon-spacing]: expected one space after ':'
   |
12 | run scenario(start:int):bool=(n'=start).then(n'=start+1)
   |                         ^
   |
test/fixtures/definition-matrix.qnt:12:29: error[format/equals-spacing]: expected one space around '='
   |
12 | run scenario(start:int):bool=(n'=start).then(n'=start+1)
   |                             ^
   |
test/fixtures/definition-matrix.qnt:12:33: error[format/assignment-spacing]: expected one space around '='
   |
12 | run scenario(start:int):bool=(n'=start).then(n'=start+1)
   |                                 ^
   |
test/fixtures/definition-matrix.qnt:12:48: error[format/assignment-spacing]: expected one space around '='
   |
12 | run scenario(start:int):bool=(n'=start).then(n'=start+1)
   |                                                ^
   |
test/fixtures/definition-matrix.qnt:12:54: error[format/binary-operator-spacing]: expected one space around '+'
   |
12 | run scenario(start:int):bool=(n'=start).then(n'=start+1)
   |                                                      ^
   |
test/fixtures/definition-matrix.qnt:13:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
13 | temporal positive(limit:int):bool=always(n>=limit)
   | ^
   |
test/fixtures/definition-matrix.qnt:13:25: error[format/type-colon-spacing]: expected one space after ':'
   |
13 | temporal positive(limit:int):bool=always(n>=limit)
   |                         ^
   |
test/fixtures/definition-matrix.qnt:13:30: error[format/type-colon-spacing]: expected one space after ':'
   |
13 | temporal positive(limit:int):bool=always(n>=limit)
   |                              ^
   |
test/fixtures/definition-matrix.qnt:13:34: error[format/equals-spacing]: expected one space around '='
   |
13 | temporal positive(limit:int):bool=always(n>=limit)
   |                                  ^
   |
test/fixtures/definition-matrix.qnt:13:43: error[format/binary-operator-spacing]: expected one space around '>='
   |
13 | temporal positive(limit:int):bool=always(n>=limit)
   |                                           ^^
   |
test/fixtures/definition-matrix.qnt:14:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
14 | nondet choose(values:Set[int]):int=values.oneOf()
   | ^
   |
test/fixtures/definition-matrix.qnt:14:22: error[format/type-colon-spacing]: expected one space after ':'
   |
14 | nondet choose(values:Set[int]):int=values.oneOf()
   |                      ^
   |
test/fixtures/definition-matrix.qnt:14:32: error[format/type-colon-spacing]: expected one space after ':'
   |
14 | nondet choose(values:Set[int]):int=values.oneOf()
   |                                ^
   |
test/fixtures/definition-matrix.qnt:14:35: error[format/equals-spacing]: expected one space around '='
   |
14 | nondet choose(values:Set[int]):int=values.oneOf()
   |                                   ^
   |
"
`;
